feat: style update

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         height: 100%;
         text-align: center;
         background-color: #f8fbfb;
+        color: #101010;
       }
 
       body {
